# clippy-action

./: .gitignore  Cargo.toml  Dockerfile
.github/: main.workflow
scripts/: entrypoint.sh
src/: action.rs  clippy.rs  github.rs  main.rs
src/github/: check_run.rs
