[package]
name = "clippy-action"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"